--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.1
+  dartz: ^0.10.1
+  firebase_auth: ^5.3.4
+  flutter_bloc: ^8.1.6
+  cloud_firestore: ^5.5.1
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
